--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4">
-                <h4>About</h4>
+                <h4>O nas</h4>
                 <div class="hline-w"></div>
                 <p>{{ site.about }}</p>
             </div>
@@ -16,7 +16,7 @@
                 </p>
             </div>
             <div class="col-lg-4">
-                <h4>Our Bunker</h4>
+                <h4>Nasz Bunkier</h4>
                 <div class="hline-w"></div>
                 <p>
                     {% for line in site.address.first.lines %}
